<resources>
    <string name="app_name">BitList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="please_wait">Please Wait</string>
    <string name="home_title">Home</string>
    <string name="account">account</string>
    <string name="sign_out">sign out</string>
    <string name="home">Home</string>
    <string name="user_name">User Name</string>
    <string name="user_tag_line">User Tag line</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="update">Update</string>
    <string name="user_email">User email</string>
    <string name="add_new_board">add new board</string>
    <string name="add_image_to_new_board">add image to new board</string>
    <string name="board_name">Board name</string>
    <string name="create">Create</string>
    <string name="priority">priority</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="select_priority">Select priority</string>
    <string name="add_member">Add member</string>
    <string name="dialogTitle">"Alert "</string>
    <string name="dialogMessage">You are about to delete a board , everything will be lost . Are you sure you want to delete this board?</string>
    <string name="signOutDialogTitle">Signout?</string>
    <string name="signOutDialogMsg">Do you relly want to sign out?</string>
    <string name="sort_boards">sort boards</string>
    <string name="task_title">Task title</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="member_image">member image</string>
    <string name="pass_reset_tv">Please enter your email address , we will send you an email to reset your password</string>
    <string name="images_in_the_task">Images in the task</string>


    <string-array name="Priority">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
</resources>