<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_profile_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            >
            <TextView
                android:id="@+id/tv_profile_activity_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:background="@drawable/card_view_border"
        android:layout_below="@+id/app_bar"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        app:cardCornerRadius="20dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:civ_border_color="@color/black"
                app:civ_border_width="0.5dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/iv_user_image"
                android:src="@drawable/logotwo"
                />
            <TextView
                android:id="@+id/tv_user_email_profile_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_email"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:layout_marginEnd="20dp"
                android:textSize="18sp"
                android:layout_marginTop="15dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_user_name_profile_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:background="@color/white"
                    android:hint="@string/name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_user_mobile_profile_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="10"
                    android:background="@color/white"
                    android:hint="@string/number" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_update_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="45dp"
                android:background="@drawable/button_rounded_border"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>




</RelativeLayout>