<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_create_board_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/yellow_primary">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create Board"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:id="@+id/tv_create_board_activity_toolbar_title"
                />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:elevation="10dp"
            android:layout_gravity="center"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="20dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_board_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:civ_border_width="0.5dp"
                    app:civ_border_color="@color/black"
                    android:contentDescription="@string/add_image_to_new_board"
                    android:src="@drawable/logotwo" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_board_name"
                        android:backgroundTint="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/board_name"
                        android:fontFamily="@font/robotomedium"
                        android:inputType="text"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/tv_board_start_date"
                        android:backgroundTint="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/start_date"
                        android:fontFamily="@font/robotomedium"
                        android:inputType="none"
                        android:focusableInTouchMode="false"
                        android:focusable="false"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/tv_board_end_date"
                        android:backgroundTint="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/end_date"
                        android:fontFamily="@font/robotomedium"
                        android:inputType="none"
                        android:focusableInTouchMode="false"
                        android:focusable="false"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:id="@+id/sp_priority"
                    android:entries="@array/Priority"
                    />

                <androidx.appcompat.widget.AppCompatButton

                    android:id="@+id/btn_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button_rounded_border"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/create"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


</LinearLayout>